@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: pkgtool,v 1.70 2007/02/27 21:29:36 mej Exp $
+# $Id: pkgtool,v 1.71 2009/07/09 08:35:13 mej Exp $
 #
 
 use strict;
@@ -77,6 +77,7 @@ print_usage_info
     print "    -A --args <arg>                  Specify additional options to pass to program\n";
     print "    -R --rcfile <rcfile>             Specify an alternate rpmrc file\n";
     print "    -D --dir <directory>             Specify \"directory\" as the full path to the module\n";
+    print "    -Q --quick <stage>               Perform a \"quick\" build, jumping right to <stage>\n";
     print "    -r --root <dir>                  Specify the build/install root (depending on mode)\n";
     print "    -H --hints <file_or_dir>         Specify location of pre-build hints or hint files\n";
     print "    -u --user <userid>               Build as <userid> rather than the current user\n";
@@ -99,14 +100,14 @@ main
                "sources|o:s", "package|p=s", "specfile|s|scripts=s",
                "module|m=s", "target|t=s", "arch|a=s", "program|P=s",
                "rcfile|R=s", "tar=s", "zip=s", "destdir|D=s",
-               "root|r=s", "hints|H=s", "args|A=s@",
+               "root|r=s", "hints|H=s", "args|A=s@", "quick|Q=s",
                "depinstaller|dep-installer|hint-installer|hi|di=s",
                "user|u=s", "allow-epoch!", "savecfg|save-config");
 
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.70 $ created on $Date: 2007/02/27 21:29:36 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.71 $ created on $Date: 2009/07/09 08:35:13 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"} || (!scalar(@ARGV) && !scalar(%OPTION) && &basename($0) !~ /^mz/)) {
         &print_usage_info();
     }
@@ -125,6 +126,7 @@ main
     $pkg_name = &pkgvar_filename($OPTION{"package"});
     &pkgvar_command($OPTION{"program"});
     &pkgvar_instructions($OPTION{"specfile"});
+    &pkgvar_quickie($OPTION{"quick"});
 
     if ($0 =~ /build$/) {
         $mode = "build";
@@ -237,22 +239,24 @@ main
             eprint "Package build failed:  $msg\n";
             return $err;
         }
-        print "Package build succeeded.  Output files are:\n\n";
-        foreach my $f (split(' ', $outfiles)) {
-            my $instroot = &pkgvar_instroot();
+        if ($outfiles) {
+            print "Package build succeeded.  Output files are:\n\n";
+            foreach my $f (split(' ', $outfiles)) {
+                my $instroot = &pkgvar_instroot();
 
-            if ($instroot && -e "$instroot$f") {
-                $f = $instroot . $f;
-            }
-            if (&copy_files($f, ".")) {
-                print &basename($f);
-            } else {
-                print $f;
-                $err = 1;
+                if ($instroot && -e "$instroot$f") {
+                    $f = $instroot . $f;
+                }
+                if (&copy_files($f, ".")) {
+                    print &basename($f);
+                } else {
+                    print $f;
+                    $err = 1;
+                }
+                print "\n";
             }
             print "\n";
         }
-        print "\n";
         &pkgvar_cleanup("temp") if ($err);
         &cleanup_build_tree();
     } elsif ($mode eq "install") {
