@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: specgen,v 1.17 2009/03/06 07:16:22 mej Exp $
+# $Id: specgen,v 1.18 2009/07/09 08:35:13 mej Exp $
 #
 
 use strict;
@@ -41,19 +41,19 @@ my %package_start = (
                      "SUMMARY" => "FIXME -- Brief synopsis goes here",
                      "NAME" => "",
                      "VERSION" => "",
-                     "RELEASE" => "1.%{?_vendorsuffix:%{_vendorsuffix}}%{!?_vendorsuffix:%{_vendor}}",
-                     "VENDORSUFFIX" => "%{?_vendorsuffix:%{_vendorsuffix}}%{!?_vendorsuffix:%{_vendor}}",
+                     "RELEASE" => "1.%{?_vendorsuffix}%{!?_vendorsuffix:%{_vendor}}",
+                     "VENDORSUFFIX" => "%{?_vendorsuffix}%{!?_vendorsuffix:%{_vendor}}",
                      "LICENSE" => "OSI-Approved",
                      "GROUP" => "FIXME/SetThis",
                      "TARBALL" => "",
                      "EXTRACTWITH" => "",
-                     "PACKAGER" => "%{?_packager:%{_packager}}%{!?_packager:%{_vendor}}",
-                     "VENDOR" => "%{?_vendorinfo:%{_vendorinfo}}%{!?_vendorinfo:%{_vendor}}",
-                     "DISTRIBUTION" => "%{?_distribution:%{_distribution}}%{!?_distribution:%{_vendor}}",
+                     "PACKAGER" => "%{?_packager}%{!?_packager:%{_vendor}}",
+                     "VENDOR" => "%{?_vendorinfo}%{!?_vendorinfo:%{_vendor}}",
+                     "DISTRIBUTION" => "%{?_distribution}%{!?_distribution:%{_vendor}}",
                      "DESCRIPTION" => "FIXME -- Description goes here",
                      "SETUP" => "",
-                     "CFLAGS" => "%{?cflags:%{cflags}}%{!?cflags:\$RPM_OPT_FLAGS}",
-                     "CXXFLAGS" => "%{?cxxflags:%{cxxflags}}%{!?cxxflags:\$RPM_OPT_FLAGS}",
+                     "CFLAGS" => "%{?cflags}%{!?cflags:\$RPM_OPT_FLAGS}",
+                     "CXXFLAGS" => "%{?cxxflags}%{!?cxxflags:\$RPM_OPT_FLAGS}",
                      "DOCFILES" => "",
                      "INSTFILES" => "/*",
                      "INSTFILES_MAIN" => "/*",
@@ -559,7 +559,7 @@ main
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.17 $ created on $Date: 2009/03/06 07:16:22 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.18 $ created on $Date: 2009/07/09 08:35:13 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"} || !scalar(@ARGV)) {
 	&print_usage_info();
     }
